--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -4,5 +4,11 @@ body {
 }
 
 a {
-  color: #00B7FF;
+  color: rgb(111, 165, 187);
+}
+
+.sidebar-nav {
+  margin-top: 20px;
+  padding: 0;
+  list-style: none;
 }
