--- a/views/index.pug
+++ b/views/index.pug
@@ -2,7 +2,7 @@ extends layout
 
 block content
   h1= title
-  p Welcome to #[em Lindsay's LocalLibrary], a very basic Express website developed as a tutorial example on the Mozilla Developer Network.
+  p Welcome to Neelesh Saladi #[em LocalLibrary], a very basic Express website developed as a tutorial example on the Mozilla Developer Network.
   p We have very few books at the moment feel free to add more.
   h1 Library Records
 
@@ -12,7 +12,7 @@ block content
     p The library has the following record counts:
 
     ul
-      //- li #[strong Books:] !{data.book_count}
+      - li #[strong Books:] !{data.book_count}
       li #[strong Copies:] !{data.book_instance_count}
       li #[strong Copies available:] !{data.book_instance_available_count} 
       li #[strong Authors:] !{data.author_count}
